# PLCCodeForge

./: .gitignore  LICENSE  README.md  WARP.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
Autothink.UIA/: PLCCodeForge.sln
Autothink.UiaAgent/: ARCHITECTURE.md  AgentHost.cs  Program.cs
Autothink.UiaAgent.DemoTarget/: MainForm.cs  Program.cs
Autothink.UiaAgent.Stage2Runner/: Autothink.UiaAgent.Stage2Runner.csproj  IUiaAgentRpc.cs  Program.cs
Autothink.UiaAgent.Tests/: AutothinkBuildArgsTests.cs  AutothinkImportProgramTextPasteArgsTests.cs  AutothinkImportVariablesArgsTests.cs  ClipboardIntegrationFactAttribute.cs  ClipboardTextTests.cs  ControlTypeMapTests.cs  ElementFinderTextMatchTests.cs  RunFlowDispatchTests.cs  SendKeysParserTests.cs  TestAssembly.cs  WaiterTests.cs
Autothink.UiaAgent.WinFormsHarness/: AgentRpcClient.cs  IUiaAgentRpc.cs  MainForm.cs  Program.cs
CppTest/: findings.md  ida-mcp-launch.ps1  progress.md  task_plan.md
Docs/: TASK-CONN-REUSE-result.md  TASK-POINTS-FIXES-result.md  TASK-UI-REDESIGN-result.md  (+3 more)
PlcGen/plc_core/: Cargo.toml
PlcGen/plc_core/src/: lib.rs  symbols_config.rs
PlcGen/plc_core/src/adapters/: clipboard.rs  mod.rs
PlcGen/plc_core/src/adapters/hollysys/: backend.rs  config.rs  factory.rs  mod.rs  parser.rs  protocol.rs  serializer.rs
PlcGen/plc_core/src/adapters/hollysys/parser/: mfc.rs  mod.rs  object_stream.rs  safety.rs  variables.rs
PlcGen/plc_core/src/application/: mod.rs  service.rs
PlcGen/plc_core/src/domain/: ast.rs  hardware.rs  mod.rs
PlcGen/plc_core/src/ports/: backend.rs  mod.rs
(+632 files in other folders)
