[package]
name = "plc_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# 错误处理：anyhow 用于应用层(简单)，thiserror 用于库层(自定义错误类型)
anyhow = "1.0.100"
thiserror = "2.0.16"

# 序列化：serde 是 Rust 的标准，用于接收前端 Tauri/JSON 数据
serde = {version = "1.0.228",features = ["derive"]}

# 二进制处理：byteorder 处理大小端，encoding_rs 处理 GBK 中文
byteorder = "1.5.0"
encoding_rs = "0.8.35"

log = "0.4.28"

# Windows API：只引入我们需要的功能，减少编译时间
[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",        # 基础句柄 HWND, HANDLE
    "Win32_System_DataExchange", # 剪贴板 OpenClipboard, SetClipboardData
    "Win32_System_Memory",     # 内存分配 GlobalAlloc
]

